--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -212,10 +212,10 @@
                     </li>
 
                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="#">
+                        <button class="dropdown-item d-flex align-items-center" (click)="logoutButton()">
                             <i class="bi bi-box-arrow-right"></i>
                             <span>Sign Out</span>
-                        </a>
+                        </button>
                     </li>
 
                 </ul><!-- End Profile Dropdown Items -->
