--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,11 @@
+/**
+* Template Name: NiceAdmin
+* Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+* Updated: Apr 20 2024 with Bootstrap v5.3.3
+* Author: BootstrapMade.com
+* License: https://bootstrapmade.com/license/
+*/
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -31,8 +39,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Main
-  --------------------------------------------------------------*/
+# Main
+--------------------------------------------------------------*/
 #main {
   margin-top: 60px;
   padding: 20px 30px;
@@ -46,8 +54,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Page Title
-  --------------------------------------------------------------*/
+# Page Title
+--------------------------------------------------------------*/
 .pagetitle {
   margin-bottom: 10px;
 }
@@ -60,8 +68,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Back to top button
-  --------------------------------------------------------------*/
+# Back to top button
+--------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -93,8 +101,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Override some default Bootstrap stylings
-  --------------------------------------------------------------*/
+# Override some default Bootstrap stylings
+--------------------------------------------------------------*/
 /* Dropdown menus */
 .dropdown-menu {
   border-radius: 4px;
@@ -344,8 +352,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Header
-  --------------------------------------------------------------*/
+# Header
+--------------------------------------------------------------*/
 .logo {
   line-height: 1;
 }
@@ -447,8 +455,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Header Nav
-  --------------------------------------------------------------*/
+# Header Nav
+--------------------------------------------------------------*/
 .header-nav ul {
   list-style: none;
 }
@@ -587,8 +595,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Sidebar
-  --------------------------------------------------------------*/
+# Sidebar
+--------------------------------------------------------------*/
 .sidebar {
   position: fixed;
   top: 60px;
@@ -748,8 +756,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Dashboard
-  --------------------------------------------------------------*/
+# Dashboard
+--------------------------------------------------------------*/
 /* Filter dropdown */
 .dashboard .filter {
   position: absolute;
@@ -949,8 +957,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Icons list page
-  --------------------------------------------------------------*/
+# Icons list page
+--------------------------------------------------------------*/
 .iconslist {
   display: grid;
   max-width: 100%;
@@ -985,8 +993,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Profie Page
-  --------------------------------------------------------------*/
+# Profie Page
+--------------------------------------------------------------*/
 .profile .profile-card img {
   max-width: 120px;
 }
@@ -1039,8 +1047,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # F.A.Q Page
-  --------------------------------------------------------------*/
+# F.A.Q Page
+--------------------------------------------------------------*/
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
@@ -1052,8 +1060,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Contact
-  --------------------------------------------------------------*/
+# Contact
+--------------------------------------------------------------*/
 .contact .info-box {
   padding: 28px 30px;
 }
@@ -1163,8 +1171,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Error 404
-  --------------------------------------------------------------*/
+# Error 404
+--------------------------------------------------------------*/
 .error-404 {
   padding: 30px;
 }
@@ -1201,8 +1209,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-  # Footer
-  --------------------------------------------------------------*/
+# Footer
+--------------------------------------------------------------*/
 .footer {
   padding: 20px 0;
   font-size: 14px;
