T314 solve routerActiveLink properties and made breadcrumb changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-sidebar></app-sidebar>
 <main id="main" class="main">
+    <app-breadcrumb></app-breadcrumb>
     <router-outlet></router-outlet>
 </main>
