--- a/src/app/home/event/event.component.html
+++ b/src/app/home/event/event.component.html
@@ -1,1 +1,17 @@
-<p>event works!</p>
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+
+            <div class="card">
+                <div class="card-body mt-3">
+                    <div class="d-flex justify-content-between">
+                        <!-- <h5 class="card-title">Event</h5> -->
+                        <button class="btn btn-primary">
+                            Create Event
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
