--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,19 +3,20 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
         <li class="nav-item">
-            <a class="nav-link" routerLink="/">
+            <a class="nav-link" routerLink="/home/dashboard" routerLinkActive #dashboard="routerLinkActive"
+                [ngClass]="{'collapsed': !dashboard.isActive}">
                 <i class="bi bi-grid"></i>
                 <span>Dashboard</span>
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link collapsed" routerLink="">
-                <i class="bi bi-grid"></i>
+            <a class="nav-link collapsed" routerLink="/home/event" routerLinkActive #event="routerLinkActive"
+                [ngClass]="{'collapsed': !event.isActive}">
+                <i class="bi bi-calendar-event"></i>
                 <span>Event</span>
             </a>
         </li>
-
     </ul>
 
 </aside>
