--- a/src/app/home/event/event.component.html
+++ b/src/app/home/event/event.component.html
@@ -2,16 +2,29 @@
     <div class="row">
         <div class="col-lg-12">
 
-            <div class="card">
+            <div class="card shadow-none my-0 rounded-0 rounded-top-2">
                 <div class="card-body mt-3">
-                    <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-end">
                         <!-- <h5 class="card-title">Event</h5> -->
-                        <button class="btn btn-primary">
-                            Create Event
-                        </button>
+                        <!-- <label class="form-check-label" for="flexSwitchCheckDefault">List View</label> -->
+                        <label class="form-check-label me-2" for="flexSwitchCheckDefault">
+                            {{ viewMode ? 'Calendar' : 'List' }}
+                        </label>
+                        <div class="form-check form-switch fs-6">
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"
+                                (click)="toggleViewButton()">
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="card m-0 border-0 shadow-none rounded-0 rounded-bottom-2">
+                <div class="card-body mt-3">
+                    <!-- <ng-template #manageEvents></ng-template> -->
+                    <app-list-view *ngIf="!viewMode"></app-list-view>
+                    <app-calendar-view *ngIf="viewMode"></app-calendar-view>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
