T314 Intergate fullCalender plugin and developed add event functionality

--- a/src/app/home/event/calendar-view/calendar-view.component.html
+++ b/src/app/home/event/calendar-view/calendar-view.component.html
@@ -1,1 +1,8 @@
-<p>calendar-view works!</p>
+<!-- <full-calendar [options]="calendarOptions" [events]="eventsPromise | async"></full-calendar> -->
+<!-- <p>calendar-view works!</p> -->
+<full-calendar [options]='calendarOptions'>
+    <ng-template #eventContent let-arg>
+        <b>{{ arg.timeText }}</b>
+        <i>{{ arg.event.title }}</i>
+    </ng-template>
+</full-calendar>
