--- a/src/app/home/event/list-view/list-view.component.html
+++ b/src/app/home/event/list-view/list-view.component.html
@@ -1,63 +1,48 @@
-<h5 class="card-title m-0 p-0 mb-3">All Event List</h5>
+<div class="d-flex justify-content-between">
+    <h5 class="card-title m-0 p-0 mb-3">All Event List</h5>
+    <button class="btn btn-sm theme-color-button" (click)="addEvent()">
+        <i class="bi bi-plus-lg"></i>
+        Add Event
+    </button>
+</div>
 <!-- <p>Add <code>.table-sm</code> to make any <code>.table</code> more compact by cutting all cell padding in half.</p> -->
-<table class="table table-sm">
-    <thead>
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Title</th>
-            <th scope="col">Image</th>
-            <th scope="col">Start Date</th>
-            <th scope="col">End Date</th>
-            <th scope="col">Description</th>
-            <th scope="col">Address</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Brandon Jacob</td>
-            <td>Designer</td>
-            <td>28</td>
-            <td>2016-05-25</td>
-            <td>2016-05-25</td>
-            <td>2016-05-25</td>
-        </tr>
-        <tr>
-            <th scope="row">2</th>
-            <td>Bridie Kessler</td>
-            <td>Developer</td>
-            <td>35</td>
-            <td>2014-12-05</td>
-            <td>2014-12-05</td>
-            <td>2014-12-05</td>
-        </tr>
-        <tr>
-            <th scope="row">3</th>
-            <td>Ashleigh Langosh</td>
-            <td>Finance</td>
-            <td>45</td>
-            <td>2011-08-12</td>
-            <td>2014-12-05</td>
-            <td>2014-12-05</td>
-        </tr>
-        <tr>
-            <th scope="row">4</th>
-            <td>Angus Grady</td>
-            <td>HR</td>
-            <td>34</td>
-            <td>2012-06-11</td>
-            <td>2014-12-05</td>
-            <td>2014-12-05</td>
-        </tr>
-        <tr>
-            <th scope="row">5</th>
-            <td>Raheem Lehner</td>
-            <td>Dynamic Division Officer</td>
-            <td>47</td>
-            <td>2011-04-19</td>
-            <td>2014-12-05</td>
-            <td>2014-12-05</td>
-        </tr>
-    </tbody>
-</table>
+<div class="table-responsive">
+
+    <table class="table table text-center">
+        <thead>
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Image</th>
+                <th scope="col">Title</th>
+                <th scope="col">Description</th>
+                <th scope="col">Start Date</th>
+                <th scope="col">End Date</th>
+                <th scope="col">Address</th>
+                <th scope="col">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let item of eventList">
+                <tr>
+
+                    <th scope="row">{{ item.id }}</th>
+                    <td>{{ item.image }}</td>
+                    <td>{{ item.title }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>{{ item.timing.startDateTime }}</td>
+                    <td>{{ item.timing.endDateTime }}</td>
+                    <td>
+                        <i class="bi bi-geo-alt-fill"></i>
+                    </td>
+                    <td>
+                        <button class="btn btn-sm btn-outline-warning">
+                            Edit
+                        </button>
+                    </td>
+                </tr>
+            </ng-container>
+        </tbody>
+    </table>
+</div>
+
 <!-- End small tables -->
