--- a/src/app/home/event/manage-event/manage-event.component.html
+++ b/src/app/home/event/manage-event/manage-event.component.html
@@ -1,68 +1,102 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Add Event</h4>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    <h4 class="modal-title fw-bolder" id="modal-basic-title">Add Event {{ data }}</h4>
 </div>
 <div class="modal-body">
     <form class="row g-3" [formGroup]="eventForm" (ngSubmit)="onSubmitEventForm()">
         <input type="hidden" name="id" formControlName="id">
         <div class="col-md-12">
-            <label for="inputName5" class="form-label">Event Title</label>
+            <label for="title" class="form-label fw-bold">Event Title</label>
             <input type="text" class="form-control"
-                [ngClass]="{'border-danger': eventForm.get('title')?.hasError('required')}" id="inputName5"
+                [ngClass]="{'border-danger': fc['title'].hasError('required') && fc['title'].touched || isSubmitted}"
                 placeholder="Enter event title" formControlName="title">
+            <span *ngIf="fc['title'].hasError('required') && fc['title'].touched || isSubmitted" class="text-danger">
+                Event name is required.
+            </span>
         </div>
         <div class="col-md-12">
-            <label for="inputName5" class="form-label">Event Description</label>
+            <label for="description" class="form-label fw-bold">Event Description</label>
             <textarea class="form-control"
-                [ngClass]="{'border-danger': eventForm.get('description')?.hasError('required')}" name="description"
-                rows="3" formControlName="description"></textarea>
+                [ngClass]="{'border-danger': fc['description'].hasError('required') && fc['description'].touched || isSubmitted}"
+                name="description" placeholder="Enter event description" rows="3"
+                formControlName="description"></textarea>
+            <span *ngIf="fc['description'].hasError('required') && fc['description'].touched || isSubmitted"
+                class="text-danger">
+                Event description is required.
+            </span>
         </div>
-        <div formGroupName="timing" class="col-md-12">
-            <div class="row">
-                <div class="col-md-6">
-                    <label for="startDate">Start Date</label>
-                    <div class="input-group">
-                        <input id="startDate" class="form-control"
-                            [ngClass]="{'border-danger': eventForm.get('timing')?.get('startDateTime')?.hasError('required')}"
-                            placeholder="yyyy-mm-dd" name="startDp" type="datetime-local"
-                            formControlName="startDateTime" />
+        <fieldset class="border pb-2 rounded-3">
+            <legend class="w-auto float-none fs-6 fw-bold">Timing</legend>
+            <div formGroupName="timing" class="col-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label class="form-label" for="startDate">Start Date</label>
+                        <div class="input-group">
+                            <input id="startDate" class="form-control"
+                                [ngClass]="{'border-danger':  fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched || isSubmitted}"
+                                placeholder="yyyy-mm-dd" name="startDp" type="datetime-local"
+                                formControlName="startDateTime" />
+                        </div>
+                        <span
+                            *ngIf="fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched || isSubmitted"
+                            class="text-danger">
+                            *required.
+                        </span>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <label for="enddate">End Date</label>
-                    <div class="input-group">
-                        <input id="enddate" class="form-control"
-                            [ngClass]="{'border-danger': eventForm.get('timing')?.get('endDateTime')?.hasError('required')}"
-                            placeholder="yyyy-mm-dd" name="endDp" type="datetime-local" formControlName="endDateTime" />
+                    <div class="col-md-6">
+                        <label class="form-label" for="enddate">End Date</label>
+                        <div class="input-group">
+                            <input id="enddate" class="form-control"
+                                [ngClass]="{'border-danger': fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched || isSubmitted}"
+                                placeholder="yyyy-mm-dd" name="endDp" type="datetime-local"
+                                formControlName="endDateTime" />
+                        </div>
+                        <span
+                            *ngIf="fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched || isSubmitted"
+                            class="text-danger">
+                            *required.
+                        </span>
                     </div>
                 </div>
             </div>
-        </div>
-        <div formGroupName="address" class="col-md-12">
-            <div class="row">
-                <div class="col-md-6">
-                    <label for="inputAddress5" class="form-label">Area</label>
-                    <input type="text" class="form-control"
-                        [ngClass]="{'border-danger': eventForm.get('address')?.get('city')?.hasError('required')}"
-                        id="inputAddres5s" placeholder="Enter event area" formControlName="city">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputAddress2" class="form-label">Pin Code</label>
-                    <input type="text" class="form-control"
-                        [ngClass]="{'border-danger': eventForm.get('address')?.get('pinCode')?.hasError('required')}"
-                        id="inputAddress2" placeholder="Enter pin code" formControlName="pinCode">
-                </div>
+        </fieldset>
+        <fieldset class="border pb-2 rounded-3">
+            <legend class="w-auto float-none fs-6 fw-bold">Address</legend>
+            <div formGroupName="address" class="col-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <label for="city" class="form-label">City</label>
+                        <input type="text" class="form-control"
+                            [ngClass]="{'border-danger': fc['address'].get('city')?.hasError('required') && fc['address'].get('city')?.touched || isSubmitted}"
+                            id="inputAddres5s" placeholder="Enter event city" formControlName="city">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="area" class="form-label">Area</label>
+                        <input type="text" class="form-control"
+                            [ngClass]="{'border-danger': fc['address'].get('area')?.hasError('required') && fc['address'].get('area')?.touched || isSubmitted}"
+                            id="inputAddress2" placeholder="Enter event area" formControlName="area">
+                    </div>
 
+                </div>
             </div>
-        </div>
+        </fieldset>
         <div class="col-12">
-            <label for="formFile" class="form-label">Image</label>
-            <input class="form-control" [ngClass]="{'border-danger': eventForm.get('image')?.hasError('required')}"
-                type="file" accept="image/png, image/jpeg" id="formFile" formControlName="image">
+            <!-- <label for="formFile" class="form-label fw-bold">Image</label>
+            <input class="form-control"
+                [ngClass]="{'border-danger': fc['image'].hasError('required') && fc['image'].touched || isSubmitted}" type="file"
+                accept="image/png, image/jpeg" id="formFile" formControlName="image"> -->
+            <label for="formFile" class="form-label fw-bold">Image</label>
+            <input class="form-control"
+                [ngClass]="{'border-danger': fc['image'].hasError('required') && fc['image'].touched || isSubmitted}"
+                type="file" accept="image/png, image/jpeg" id="formFile" (change)="onFileChange($event)"
+                formControlName="image">
         </div>
 
-        <div class="col-12 text-center">
-            <button type="submit" class="btn theme-color-button" (click)="modal.close('Save click')">Save</button>
+        <div class="text-center d-grid gap-2 d-md-flex justify-content-md-center">
+            <button type="submit" class="btn theme-color-button">Save</button>
+            <button type="button" class="btn btn-outline-secondary" aria-label="Close"
+                (click)="modal.dismiss('Cross click')">
+                Close
+            </button>
         </div>
 
     </form>
