--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1241,5 +1241,9 @@ h6 {
   color: white;
 }
 
+.profile-image {
+  width: 40px;
+  border-radius: 50%;
+}
 /* Importing Bootstrap SCSS file. */
 // @import 'bootstrap/scss/bootstrap';
