--- a/src/app/home/event/event.component.html
+++ b/src/app/home/event/event.component.html
@@ -1,15 +1,21 @@
 <section class="section">
     <div class="row">
         <div class="col-lg-12">
-
             <div class="card shadow-none my-0 rounded-0 rounded-top-2">
-                <div class="card-body mt-3">
-                    <div class="d-flex justify-content-end">
-                        <!-- <h5 class="card-title">Event</h5> -->
-                        <!-- <label class="form-check-label" for="flexSwitchCheckDefault">List View</label> -->
-                        <label class="form-check-label me-2" for="flexSwitchCheckDefault">
-                            {{ viewMode ? 'Calendar' : 'List' }}
-                        </label>
+                <div class="card-body mt-3 pb-2">
+                    <div class="d-flex justify-content-around">
+                        <div class="me-auto">
+                            <h5>
+                                <i class="bi bi-{{ viewMode ? 'calendar2-week' : 'list' }}"></i>
+
+                                {{ viewMode ? 'Calendar' : 'List' }}
+                            </h5>
+                        </div>
+                        <div>
+                            <label class="form-check-label me-2" for="flexSwitchCheckDefault">
+                                {{ viewMode ? 'Calendar' : 'List' }}
+                            </label>
+                        </div>
                         <div class="form-check form-switch fs-6">
                             <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault"
                                 (click)="toggleViewButton()">
