--- a/src/app/home/event/manage-event/manage-event.component.html
+++ b/src/app/home/event/manage-event/manage-event.component.html
@@ -1,29 +1,34 @@
-<div class="modal-header">
-    <h4 class="modal-title fw-bolder" id="modal-basic-title">Add Event {{ data }}</h4>
+<div [ngClass]="id ? 'offcanvas-header' : 'modal-header'">
+    <h4 class="fw-bolder" [ngClass]="id ? 'offcanvas-title' : 'modal-title' ">{{id ? 'Edit' : 'Add'}} Event</h4>
+    <button type="button" class="btn-close" aria-label="Close"
+        (click)="id ? offcanvas.dismiss() : modal.dismissAll()"></button>
 </div>
-<div class="modal-body">
+<div [ngClass]="id ? 'offcanvas-body' : 'modal-body' ">
     <form class="row g-3" [formGroup]="eventForm" (ngSubmit)="onSubmitEventForm()">
         <input type="hidden" name="id" formControlName="id">
         <div class="col-md-12">
             <label for="title" class="form-label fw-bold">Event Title</label>
             <input type="text" class="form-control"
-                [ngClass]="{'border-danger': fc['title'].hasError('required') && fc['title'].touched || isSubmitted}"
+                [ngClass]="{'border-danger': fc['title'].hasError('required') && (fc['title'].touched || isSubmitted)}"
                 placeholder="Enter event title" formControlName="title">
-            <span *ngIf="fc['title'].hasError('required') && fc['title'].touched || isSubmitted" class="text-danger">
+            <span *ngIf="(fc['title'].hasError('required')) && (fc['title']?.touched || isSubmitted)"
+                class="text-danger">
                 Event name is required.
             </span>
         </div>
         <div class="col-md-12">
             <label for="description" class="form-label fw-bold">Event Description</label>
-            <textarea class="form-control"
-                [ngClass]="{'border-danger': fc['description'].hasError('required') && fc['description'].touched || isSubmitted}"
+            <textarea class="form-control" type="text"
+                [ngClass]="{'border-danger':(fc['description'].hasError('required') && fc['description'].touched) || (isSubmitted && fc['description'].invalid)}"
                 name="description" placeholder="Enter event description" rows="3"
                 formControlName="description"></textarea>
-            <span *ngIf="fc['description'].hasError('required') && fc['description'].touched || isSubmitted"
+            <span
+                *ngIf="(fc['description'].hasError('required') && fc['description'].touched) || (isSubmitted && fc['description'].invalid)"
                 class="text-danger">
                 Event description is required.
             </span>
         </div>
+        <!-- Timing -->
         <fieldset class="border pb-2 rounded-3">
             <legend class="w-auto float-none fs-6 fw-bold">Timing</legend>
             <div formGroupName="timing" class="col-md-12">
@@ -32,12 +37,12 @@
                         <label class="form-label" for="startDate">Start Date</label>
                         <div class="input-group">
                             <input id="startDate" class="form-control"
-                                [ngClass]="{'border-danger':  fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched || isSubmitted}"
+                                [ngClass]="{'border-danger':  (fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched) || (isSubmitted && fc['timing'].get('startDateTime')?.invalid)}"
                                 placeholder="yyyy-mm-dd" name="startDp" type="datetime-local"
                                 formControlName="startDateTime" />
                         </div>
                         <span
-                            *ngIf="fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched || isSubmitted"
+                            *ngIf="(fc['timing'].get('startDateTime')?.hasError('required') && fc['timing'].get('startDateTime')?.touched) || (isSubmitted && fc['timing'].get('startDateTime')?.invalid)"
                             class="text-danger">
                             *required.
                         </span>
@@ -46,12 +51,12 @@
                         <label class="form-label" for="enddate">End Date</label>
                         <div class="input-group">
                             <input id="enddate" class="form-control"
-                                [ngClass]="{'border-danger': fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched || isSubmitted}"
+                                [ngClass]="{'border-danger': ((fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched) || (isSubmitted &&fc['timing'].get('endDateTime')?.invalid))}"
                                 placeholder="yyyy-mm-dd" name="endDp" type="datetime-local"
                                 formControlName="endDateTime" />
                         </div>
                         <span
-                            *ngIf="fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched || isSubmitted"
+                            *ngIf="((fc['timing'].get('endDateTime')?.hasError('required') && fc['timing'].get('endDateTime')?.touched) || (isSubmitted &&fc['timing'].get('endDateTime')?.invalid))"
                             class="text-danger">
                             *required.
                         </span>
@@ -59,6 +64,7 @@
                 </div>
             </div>
         </fieldset>
+        <!-- Address Group -->
         <fieldset class="border pb-2 rounded-3">
             <legend class="w-auto float-none fs-6 fw-bold">Address</legend>
             <div formGroupName="address" class="col-md-12">
@@ -66,38 +72,54 @@
                     <div class="col-md-6">
                         <label for="city" class="form-label">City</label>
                         <input type="text" class="form-control"
-                            [ngClass]="{'border-danger': fc['address'].get('city')?.hasError('required') && fc['address'].get('city')?.touched || isSubmitted}"
+                            [ngClass]="{'border-danger': (fc['address'].get('city')?.hasError('required') && fc['address'].get('city')?.touched) || (fc['address'].get('city')?.invalid && isSubmitted)}"
                             id="inputAddres5s" placeholder="Enter event city" formControlName="city">
+                        <span
+                            *ngIf="(fc['address'].get('city')?.hasError('required') && fc['address'].get('city')?.touched) || (fc['address'].get('city')?.invalid && isSubmitted)"
+                            class="text-danger">
+                            *required.
+                        </span>
                     </div>
                     <div class="col-md-6">
                         <label for="area" class="form-label">Area</label>
                         <input type="text" class="form-control"
-                            [ngClass]="{'border-danger': fc['address'].get('area')?.hasError('required') && fc['address'].get('area')?.touched || isSubmitted}"
+                            [ngClass]="{'border-danger': (fc['address'].get('area')?.hasError('required') && fc['address'].get('area')?.touched) || (fc['address'].get('area')?.invalid && isSubmitted)}"
                             id="inputAddress2" placeholder="Enter event area" formControlName="area">
+                        <span
+                            *ngIf="(fc['address'].get('area')?.hasError('required') && fc['address'].get('area')?.touched) || (fc['address'].get('area')?.invalid && isSubmitted)"
+                            class="text-danger">
+                            *required.
+                        </span>
                     </div>
 
                 </div>
             </div>
         </fieldset>
+        <!-- Image -->
         <div class="col-12">
-            <!-- <label for="formFile" class="form-label fw-bold">Image</label>
-            <input class="form-control"
-                [ngClass]="{'border-danger': fc['image'].hasError('required') && fc['image'].touched || isSubmitted}" type="file"
-                accept="image/png, image/jpeg" id="formFile" formControlName="image"> -->
             <label for="formFile" class="form-label fw-bold">Image</label>
             <input class="form-control"
-                [ngClass]="{'border-danger': fc['image'].hasError('required') && fc['image'].touched || isSubmitted}"
+                [ngClass]="{'border-danger': (fc['image'].hasError('required') && fc['image'].touched) || (isSubmitted && fc['image'].invalid)}"
                 type="file" accept="image/png, image/jpeg" id="formFile" (change)="onFileChange($event)"
                 formControlName="image">
+            <span
+                *ngIf="(fc['image'].hasError('required') && fc['image'].touched) || (isSubmitted && fc['image'].invalid)"
+                class="text-danger">
+                *required.
+            </span>
+
+        </div>
+        <!-- Uploaded Image -->
+        <div class="col-12" *ngIf="profileImage">
+            <img [src]="profileImage" class="profile-image me-2" alt="">
+            <label for="selectedProfileImage">Selected Image</label>
         </div>
 
         <div class="text-center d-grid gap-2 d-md-flex justify-content-md-center">
-            <button type="submit" class="btn theme-color-button">Save</button>
-            <button type="button" class="btn btn-outline-secondary" aria-label="Close"
-                (click)="modal.dismiss('Cross click')">
-                Close
+            <button type="submit" class="btn {{ id ? 'btn-outline-warning': 'theme-color-button'}}">
+                {{ id ? 'Update Event' : 'Add Event' }}
             </button>
-        </div>
 
+        </div>
     </form>
 </div>
