--- a/src/app/home/event/manage-event/manage-event.component.html
+++ b/src/app/home/event/manage-event/manage-event.component.html
@@ -33,7 +33,7 @@
             <legend class="w-auto float-none fs-6 fw-bold">Timing</legend>
             <div formGroupName="timing" class="col-md-12">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-xxl-6">
                         <label class="form-label" for="startDate">Start Date</label>
                         <div class="input-group">
                             <input id="startDate" class="form-control"
@@ -47,7 +47,7 @@
                             *required.
                         </span>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-xxl-6">
                         <label class="form-label" for="enddate">End Date</label>
                         <div class="input-group">
                             <input id="enddate" class="form-control"
