--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -10,7 +10,7 @@
             </h5>
         </div>
         <div>
-            <button type="button" class="btn btn-outline-secondary" (click)="modalService.dismissAll()">Save</button>
+            <button type="button" class="btn btn-outline-secondary" (click)="openEditForm()">Edit</button>
         </div>
     </div>
     <img src="{{ eventDetails.image }}" class="card-img-top" alt="...">
