--- a/src/app/home/event/list-view/list-view.component.html
+++ b/src/app/home/event/list-view/list-view.component.html
@@ -5,7 +5,6 @@
         Add Event
     </button>
 </div>
-<!-- <p>Add <code>.table-sm</code> to make any <code>.table</code> more compact by cutting all cell padding in half.</p> -->
 <div class="table-responsive">
 
     <table class="table table text-center">
@@ -30,15 +29,16 @@
                         <img src="{{ item.image }}" class="profile-image" alt="Image not found" />
                     </td>
                     <td>{{ item.title }}</td>
-                    <td>{{ item.description }}</td>
-                    <td>{{ item.timing.startDateTime| date : 'medium' }}</td>
-                    <td>{{ item.timing.endDateTime | date : 'medium'}}</td>
+                    <td>{{ item.description.length > 30 ? item.description.substring(0, 31)+'...' : item.description }}
+                    </td>
+                    <td>{{ item.timing.start | date : 'medium' }}</td>
+                    <td>{{ item.timing.end | date : 'medium'}}</td>
                     <td>
                         <i class="bi bi-geo-alt-fill"></i>
                     </td>
                     <td>
                         <button class="btn btn-outline-info" (click)="viewEventDetails(item)">
-                            View
+                            <i class="bi bi-info-circle"></i> Info
                         </button>
                     </td>
                 </tr>
