--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,41 +1,48 @@
-<!-- <div class="modal-header">
-    <h5 class="modal-title" id="modal-basic-title"> modalHeader </h5>
-</div>
-<div class="modal-body"> -->
-<div class="card mb-0 p-2 rounded-3">
-    <div class="card-header d-flex justify-content-between">
-        <div>
-            <h5 class="fw-bolder">
+<div class="card m-0">
+    <div class="card-header d-flex align-items-center">
+        <div class="p-1 flex-grow-1">
+            <h5 class="fw-bolder mb-0">
                 Event Detail
             </h5>
         </div>
-        <div>
-            <button type="button" class="btn btn-outline-secondary" (click)="openEditForm()">Edit</button>
+        <div class="p-1">
+            <button type="button" class="btn btn-sm theme-color-button" (click)=" openEditForm()">
+                <i class="bi bi-pencil"></i>
+
+            </button>
+        </div>
+        <div class="p-1">
+            <button type="button" class="btn btn-sm btn-outline-danger" (click)="modalService.dismissAll()">
+                <i class="bi bi-x-lg"></i>
+
+            </button>
         </div>
     </div>
-    <img src="{{ eventDetails.image }}" class="card-img-top" alt="...">
-    <div class="card-body">
-        <h5 class="card-title pb-0">
-            {{ eventDetails.title }}
-        </h5>
-        <p class="card-text">
-            {{eventDetails.description}}
-        </p>
-        <h5>
-            {{eventDetails.address['area']}}, {{eventDetails.address['city']}}
-        </h5>
+    <div class="row g-0 m-0 px-3">
+        <div class="col-md-4 align-items-center">
+            <img src="{{ eventDetails.image }}" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body pb-0">
+                <h5 class="card-title pb-0">
+                    {{ eventDetails.title }}
+                </h5>
+                <p class="card-text">
+                    {{eventDetails.description}}
+                </p>
+                <h6>
+                    <i class="bi bi-geo-alt-fill"></i>
+                    {{eventDetails.address['area']}}, {{eventDetails.address['city']}}
+                </h6>
+            </div>
+        </div>
     </div>
-    <div class="card-footer d-flex justify-content-lg-start">
-        <h6>
-            <i class="bi bi-time"></i>
-            {{ eventDetails.timing.startDateTime|date:'short' }} -
-            {{eventDetails.timing.endDateTime|date:'short'}}
+    <div class="card-footer d-flex justify-content-lg-center">
+        <h6 class="mb-0">
+            <i class="bi bi-calendar3"></i>
+            {{ eventDetails.timing.start|date:'MMM d, y, h:mm' }}
+            <i class="bi bi-arrow-right"></i>
+            {{eventDetails.timing.end|date:'MMM d, y, h:mm'}}
         </h6>
     </div>
 </div>
-<!-- </div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modalService.dismissAll()">Save</button>
-</div> -->
-
-<!-- <button class="btn btn-lg btn-outline-primary" (click)="modalService.dismissAll()">Launch demo modal</button> -->
