--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1237,7 +1237,7 @@ h6 {
 
 .theme-color-button:hover {
   background-color: #4154f1;
-  border: 1px solid white;
+  // border: 1px solid 4154f1;
   color: white;
 }
 
