--- a/src/app/home/event/calendar-view/calendar-view.component.html
+++ b/src/app/home/event/calendar-view/calendar-view.component.html
@@ -1,8 +1,6 @@
-<!-- <full-calendar [options]="calendarOptions" [events]="eventsPromise | async"></full-calendar> -->
-<!-- <p>calendar-view works!</p> -->
 <full-calendar [options]='calendarOptions'>
-    <ng-template #eventContent let-arg>
+    <!-- <ng-template #eventContent let-arg>
         <b>{{ arg.timeText }}</b>
         <i>{{ arg.event.title }}</i>
-    </ng-template>
+    </ng-template> -->
 </full-calendar>
