--- a/src/app/home/event/list-view/list-view.component.html
+++ b/src/app/home/event/list-view/list-view.component.html
@@ -34,11 +34,16 @@
                     <td>{{ item.timing.start | date : 'medium' }}</td>
                     <td>{{ item.timing.end | date : 'medium'}}</td>
                     <td>
-                        <i class="bi bi-geo-alt-fill"></i>
+                        <button class="btn btn-link" (click)="viewLocation(item.address)">
+                            <i class="bi bi-geo-alt-fill"></i>
+                        </button>
                     </td>
                     <td>
-                        <button class="btn btn-outline-info" (click)="viewEventDetails(item)">
-                            <i class="bi bi-info-circle"></i> Info
+                        <button class="btn btn-outline-info me-2" (click)="viewEventDetails(item)">
+                            <i class="bi bi-info-circle"></i>
+                        </button>
+                        <button class="btn btn-outline-danger" (click)="deleteEvent(item.id)">
+                            <i class="bi bi-trash"></i>
                         </button>
                     </td>
                 </tr>
