--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1243,7 +1243,24 @@ h6 {
 
 .profile-image {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #4154f1;
+  border-radius: 10px;
 }
 /* Importing Bootstrap SCSS file. */
 // @import 'bootstrap/scss/bootstrap';
